--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "postal-calculator",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nefi Aguilar",
