--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Nefi Aguilar",
   "license": "ISC",
   "dependencies": {
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1"
   }
 }
